fixed small text on mobile

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body{
         font-size: 2rem;
     }    
     .output-container input {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
     }
 }
 
@@ -156,6 +156,12 @@ body{
         font-size: 1.7rem;
     }    
     .output-container input {
-        font-size: 0.68rem;
+        font-size: 0.8rem;
+    }
+}
+
+@media all and (max-width: 320px) {   
+    .output-container input {
+        font-size: 0.7rem;
     }
 }
